public/css/user.css
@import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap');
@import url("https://use.typekit.net/mch3zne.css");

:root {
    /* color palette */
    --yellow: #ebe8d4;
    --red: #b05151;
    --darkred: #873b3b;
    --black: #383030;
    --white: #fdfdfd;
    --gray: #c9c9c9;
    --desert: #cfc7aa;
    --darkdesert: #c1b794;

    /* default attribute values */
    --default-text-color: var(--black);
    --default-font-size: 20px;
    --default-font-weight: 700;
    --default-title-text: 'corsario-variable', sans-serif;
    --default-norm-text: 'Anonymous Pro', monospace;
    --default-border: 2px solid var(--black);
    --default-border-radius: 5px;

    /* default attributes */
    font-weight: var(--default-font-weight);
}

.action-buttons {
    margin-left:auto;
}

/* form {
    padding-left:10px;
    padding-right:10px;
    margin:0;
} */

h5 {
    font-family: 'Anonymous Pro', monospace;
    font-variation-settings: "opsz" 6, "wght" 200;
    margin-top: 1em;
    margin-bottom:1em;
}

hr {
    border:1px solid var(--default-text);
}

.content-container {
    display:flex;
    flex-direction:row;
    margin:2.5% 5%;
    gap: 10px;
}

.left {
    display:flex;
    flex-direction:column;
    width:30%;
}

.profile {
    display:flex;
    flex-direction:column;
    border: 2px solid var(--default-text);
    width:100%;
    padding: 5%;
    margin-bottom:10px;
}

.profile-pic {
    margin:auto;
}

.profile-pic img{
    width: 150px; /* Adjust the width as needed */
    height: 150px;
    border: 2px solid var(--default-text);
    border-radius: 100px;
}

 .profile-controls {
    display:flex;
    flex-direction:row;
    margin:auto;
    margin-top:20px;
    font-size: 0.6rem;
    width:100%;
    
}

.profile-information {
    margin:auto;
    text-align:center;
    margin-bottom: -15px;
}


.profile-controls button {
    border: 2px solid var(--default-text);
    border-radius: 10px;
    padding:7.5px;
    background:#cfc7aa;
    font-family:'Anonymous Pro', monospace;
    margin:auto;
    margin-bottom:7px;
    margin-top: 4px;
    cursor: pointer;
    width: 39px;
}

.profile-controls button:hover {
    background-color: var(--darkdesert);

}

.profile-controls .edit-profile {
    padding:17.5px;
    background-image:url('/static/img/spritesheet.png');
    background-repeat: no-repeat;
    background-size:500px 25px;
    background-position:-370px center;
}

.profile-controls .add-photo {
    padding:17.5px;
    background-image:url('/static/img/spritesheet.png');
    background-repeat: no-repeat;
    background-size:600px 30px;
    background-position:-268px center;
}

.profile-controls .delete-profile {
    padding:17.5px;
    background-image:url('/static/img/spritesheet.png');
    background-repeat: no-repeat;
    background-size:600px 30px;
    background-position:-388px center;
}

.profile-controls > div{
    display:flex;
    flex-direction:column;
    width:100%;
    text-align:center;
    margin:auto;
}


.reviews-container {
    width:100%;
}

.my-reviews{
    padding:5%;
    border:2px solid var(--default-text);
    background-color: var(--bg);
    width:100%;
    display:flex;
    flex-direction:row;
    justify-content: space-between;
}

.star {
    display: inline-block;
    background: url('/static/img/spritesheet.png');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 0px center;
    width: 28px;
    height: 30px;
    /* margin-right: 20px; */
    margin-top:auto;
    margin-bottom:auto;
}

.group {
    display: flex;
    flex-direction: row;
}

.my-reviews h4 {
    margin-top:auto;
    margin-bottom:auto;
}

.profile-num {
    margin-top:auto;
    margin-bottom:auto;

}

.saved-container {
    margin-top: 10px;
    width: 100%;
}

.my-saves{
    padding:5%;
    border:2px solid var(--default-text);
    background-color: var(--bg);
    width:100%;
    display:flex;
    flex-direction:row;
    justify-content: space-between;
}

.saved {
    content: "";
    display: inline-block;
    width: 20px;
    height: 20px;
    background-image: url("/static/img/spritesheet.png");
    background-size: cover;
    background-position: 89.25% 0;
    margin: auto 20px auto 4px;
}

.right {
    display:flex;
    flex-direction:column;
    border-left: 2px solid #383030;
    width: 70%;

}

.main-section {
    display: flex; 
    flex-direction: column;
}

.heading {
    margin-left: 40px;
}

.review-section hr {
    width: 95%;
}

.review-post-container {
    display: flex;
    flex-direction: row;
    margin-top: 20px;
    height: 200px;
}

.sort-container {
    display: flex;
    flex-direction: row;
    gap: 10px;
    margin-top: -25px;
    margin-bottom: 20px;

}

.sort-by {
    display: inline-block;
    background-color: var(--yellow);
    font-family: var(--default-norm-text);
    font-weight: 200;
}

.sort-container label{
    font-weight: 300;
    font-size: 15px;
}

.reviews-section {
    display: flex;
    flex-direction: column;
    gap: 10px;
}


.customer-reviews {
    display: flex;
    flex-direction: column;
    margin-left: 50px;
    gap:10px;
}


.post {
    display: flex;
    flex-direction: column;
    padding-top: 1rem;
    border-bottom: 1px solid #383030;
    padding-bottom: 1rem;
    width: 100%;
}

.post-header {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-bottom: 0.5rem;
}

.restaurant-pic {
    border-radius: 25%;
    height: 4rem;
    width: 4rem;
    margin-right: 1.5rem;
    border: var(--default-border);
}

.post-info-name {
    font-family: var(--default-title-text);
    font-weight:700;
    margin-top: -15px;
}

.post-info {
    display: flex;
    flex-direction: column;
    align-items: left;
    margin: -15px;
    margin-left: 15px;
}

.tag-container {
    font-family: 'Anonymous Pro', monospace;
    font-weight:700;
    display: flex;
    flex-direction: row;
    margin-top:auto;
    height:15%;
    
}

.tag {
    background-color: #cfc7aa;
    height:100%;
    min-width: 5%;
    border-radius: 5px;
    margin-right: 5px;
    text-align:center;
    font-size: 12px;
}

div.tag-container div {
    display:inline-block;
    padding:5px;
}

.post-rating {
    display: flex;
    flex-direction: row;
    margin: -10px;
    gap: 5px;
    margin-top: -15px;
}

ul {
    padding:0px;
    margin: 0.5em;
    margin-left: 0.3em;
    margin-top: 15px;
}

#rating-1.rating-scale > li {
    display: inline-block;
    background-image: url("/static/img/spritesheet.png");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 10.5% center;
    padding: 0;
    width: 1.0rem;
    height: 1.2rem;
    margin-right: -30px;
}

.post-date {
    display: inline-block;
    font-size: .7rem;
    font-weight:700;
    margin-top: -35px;
    margin-left: 110px;
}

.post-review {
    margin-top: 25px;
    font-size: 15px;
}

.post-location {
    font-size: .8rem;
}


#rating-1.rating-scale > li:nth-child(-n+3) {
    background-position: 0 center;
}

.saved-restaurants {
    display: flex;
    flex-direction: column;
    margin-left: 40px;
}

.resto {
    display: flex;
    flex-direction: row;
    margin-bottom: 25px;
    justify-content: space-between;
    margin-right: 200px;
}

.resto-info {
    display: flex;
    flex-direction: row;

}

.resto-name {
    margin-top: 30px;
    font-family: var(--default-title-text);
    font-weight: 700;
}

.restaurant-button {
    border: none;
    background: none;
    padding: 0;
    cursor: pointer; /* Change cursor to pointer on hover */
    /* Add any additional styling here */
}

.remove-resto {
    padding: 17px;
    border: 2px solid var(--default-text);
    border-radius: 10px;
    background: #cfc7aa url('/static/img/spritesheet.png') -388px center; /* Combine background properties */
    background-size: 600px 30px;
    font-family: 'Anonymous Pro', monospace;
    cursor: pointer;
    margin-top: 12px;
}

.remove-resto:hover {
    background-color: var(--darkdesert);
}

.post-profile-pic {
    height: 4.5rem;
    width: 4.5rem;
    border-radius: 10px;
    border: var(--default-border);
}

li {
    margin-right: -10px;
    margin-top: 10px;
}

.owner-reply-container {
    display: inline-block;
    margin-top: 20px;
    background-color: #c9c9c9;
    height: auto;
    border-radius: 25px;
    padding: 25px;
}

.owner-label {
    color: #873b3b;
    font-weight: 900;
    font-size: 0.9rem;
}

.owner-reply-container p {
    word-wrap: break-word;
    font-size: 0.8rem;
}

ul {
    list-style-type: none;
}

